# streaming-cookbook

./: .env.example  .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
python/: README.md
python/a2ui/: README.md  langgraph.json  pyproject.toml
python/a2ui/src/: agent.py
python/multimodal/: README.md  langgraph.json  pyproject.toml
python/multimodal/src/: agent.py
python/react-custom-transport/: README.md  pyproject.toml
python/react-custom-transport/frontend/: index.html  package-lock.json  package.json
python/react-custom-transport/frontend/src/: App.tsx  threads.ts
python/react-custom-transport/src/app/: session.py
python/streaming/: .gitignore  README.md  langgraph.json  pyproject.toml
python/streaming/src/a2a/: in_process.py  remote.py
python/streaming/src/agents/: a2a_research.py  deep_agent.py  hitl_agent.py  research_pipeline.py  shared.py  simple_tool_graph.py  simple_tool_with_metrics.py
python/streaming/src/basic/: in_process.py  remote.py
python/streaming/src/custom_transformer/: in_process.py  remote.py
python/streaming/src/human_in_the_loop/: in_process.py  remote.py
python/streaming/src/messages/: in_process.py  model.py  remote.py
python/streaming/src/parallel/: in_process.py  remote.py
python/streaming/src/shared/: a2a_transformer.py  custom_transformers.py  dev_server.py
python/streaming/src/streaming_examples/: __init__.py
python/streaming/src/streaming_examples/agents/: __init__.py  a2a_research.py  deep_agent.py  hitl_agent.py  research_pipeline.py  shared.py  simple_tool_graph.py  simple_tool_with_metrics.py
python/streaming/src/streaming_examples/scripts/: _utils.py  a2a.py  basic.py  custom_transformer.py  human_in_the_loop.py  messages.py  messages_model.py  parallel.py  subagents.py  subgraphs.py
python/streaming/src/streaming_examples/shared/: __init__.py  a2a_transformer.py  custom_transformers.py  dev_server.py  env.py
python/streaming/src/subagent_status/: in_process.py  remote.py
python/streaming/src/subagents/: in_process.py  remote.py
python/streaming/src/subgraphs/: in_process.py  remote.py
python/ui-angular/: README.md  pyproject.toml
python/ui-angular/src/: agent.py
python/ui-react/: README.md  pyproject.toml
python/ui-react/src/: agent.py
python/ui-svelte/: README.md  langgraph.json  pyproject.toml
python/ui-svelte/src/: agent.py
python/ui-vue/: README.md  pyproject.toml
python/ui-vue/src/: agent.py
typescript/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
typescript/a2ui/: README.md  eslint.config.js  index.html  langgraph.json  package.json  tsconfig.app.json
typescript/a2ui/src/: App.tsx  agent.ts  main.tsx  styles.css  utils.ts
typescript/multimodal/: README.md  langgraph.json  package.json
typescript/openui/: README.md  index.html  package.json
typescript/openui/scripts/: test-data-sources.mts
typescript/openui/src/: App.tsx  agent.ts  styles.css  tools.ts
typescript/openui/src/data-sources/: runtime.ts
typescript/react-custom-backend/: package.json
typescript/react-custom-transport/: README.md  package.json
typescript/shadcn/: .gitignore  README.md  index.html  langgraph.json  oxlint.json  package.json  smoke.mjs  tsconfig.app.json  tsconfig.server.json  vite.config.ts
typescript/shadcn/src/: app.tsx  globals.css
typescript/shadcn/src/components/: chat-thread.tsx  empty-state.tsx  response.tsx  reviewer-card.tsx  reviewer-detail-dialog.tsx  reviewer-status.tsx  tool-activity.tsx
typescript/shadcn/src/lib/: reviewers.ts  stream.ts
typescript/shadcn/src/server/: agent.ts  sandbox.ts
typescript/streaming/: README.md  langgraph.json  package.json
typescript/streaming/src/shared/: a2a-transformer.ts
typescript/streaming/src/subagent-status/: remote.ts
typescript/ui-angular/: README.md  package.json
typescript/ui-angular/src/: app.ts
typescript/ui-react/: README.md  index.html  langgraph.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
typescript/ui-react/src/: App.tsx  agent.mts  main.tsx  reconnect.tsx  styles.css
typescript/ui-react/src/branching/: BranchingProvider.tsx  BranchingView.tsx  index.ts
typescript/ui-react/src/reasoning/: ReasoningView.tsx  ThinkingBubble.tsx  index.ts
typescript/ui-react/src/reconnect/: ReconnectProvider.tsx  ReconnectView.tsx  index.ts
typescript/ui-react/src/shared/: DemoLandingView.tsx  DemoSelectionProvider.tsx  DemoShell.tsx  index.ts  (+1 more)
typescript/ui-svelte/: README.md  package.json
typescript/ui-svelte/src/: App.svelte
typescript/ui-vue/: README.md  langgraph.json  package.json
typescript/ui-vue/src/: App.vue
(+10 files in other folders)
