[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-angular-backend"
version = "0.0.0"
description = "Python backend serving the same `agent` graph as typescript/ui-angular for the Angular frontend."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.0,<2.0.0",
    "pydantic>=2.0",
    # The langgraph-api server used to serve the in-process graph declared
    # in `langgraph.json`.
    "langgraph-api==0.9.0rc1",
    # langgraph-api 0.9.0rc1 declares langgraph-runtime-inmem<0.29 but
    # calls a Stream.join_event_streaming method only present from the
    # 0.29 dev line. Pin the matching pre-release explicitly.
    "langgraph-runtime-inmem==0.29.0.dev1",
    # Provides `langgraph dev`.
    "langgraph-cli>=0.4.0",
]

[tool.uv]
prerelease = "allow"
override-dependencies = [
    "langgraph-runtime-inmem==0.29.0.dev1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
